--- a/DagimonMerge/Base.lproj/Main.storyboard
+++ b/DagimonMerge/Base.lproj/Main.storyboard
@@ -1,24 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="landscape" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DagimonMerge" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFill" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="hQv-qw-Kkc">
+                                <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="Omegamon" translatesAutoresizingMaskIntoConstraints="NO" id="i0I-Tu-vyn">
+                                <rect key="frame" x="233" y="0.0" width="485" height="414"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="Metalgarurumon" translatesAutoresizingMaskIntoConstraints="NO" id="ULo-wU-vR1">
+                                <rect key="frame" x="596" y="114" width="300" height="300"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="bdbe64565f2a0c0f564ce4506743b912" translatesAutoresizingMaskIntoConstraints="NO" id="FhL-RY-gUN">
+                                <rect key="frame" x="0.0" y="114" width="300" height="300"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="lTH-y7-NWh">
+                                <rect key="frame" x="216" y="20" width="519" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="minimumTrackTintColor" systemColor="systemRedColor"/>
+                                <connections>
+                                    <action selector="combineAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="QMS-cQ-fTm"/>
+                                </connections>
+                            </slider>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="hQv-qw-Kkc" secondAttribute="trailing" id="CAr-0N-A4C"/>
+                            <constraint firstAttribute="bottom" secondItem="hQv-qw-Kkc" secondAttribute="bottom" id="aGz-VP-qo5"/>
+                            <constraint firstItem="hQv-qw-Kkc" firstAttribute="left" secondItem="8bC-Xf-vdC" secondAttribute="left" id="fT7-68-Bre"/>
+                            <constraint firstItem="hQv-qw-Kkc" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="kkZ-5T-IVi"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="combine" destination="i0I-Tu-vyn" id="IAw-NB-QiC"/>
+                        <outlet property="combineSlider" destination="lTH-y7-NWh" id="V5j-Rc-gLn"/>
+                        <outlet property="element1" destination="FhL-RY-gUN" id="Lmk-Lp-NZd"/>
+                        <outlet property="element2" destination="ULo-wU-vR1" id="yCr-we-Odj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="34.821428571428569" y="92.753623188405811"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Image" width="1920" height="1080"/>
+        <image name="Metalgarurumon" width="320" height="320"/>
+        <image name="Omegamon" width="320" height="320"/>
+        <image name="bdbe64565f2a0c0f564ce4506743b912" width="500" height="500"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
